Starting point for translations.

--- a/new-docs/index.html
+++ b/new-docs/index.html
@@ -14,8 +14,9 @@
     window.$docsify = {
       name: '',
       repo: '',
-      coverpage: true,
-      loadSidebar: true
+      coverpage: ['/', '/zh-cn/'],
+      loadSidebar: true,
+      loadNavbar: 'nav.md'
     }
   </script>
   <!-- Docsify v4 -->
