Revert "added payout render logic to main index file"
This reverts commit 2793878373b34b58f2653940a8bfbd86287b69c1.

--- a/new-docs/index.html
+++ b/new-docs/index.html
@@ -23,7 +23,7 @@
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
   <script src="https://unpkg.com/@paybutton/paybutton@1.0.2/dist/paybutton.js"></script>
   <script type="text/javascript">
-  	function randomColour() {
+  	/*function randomColour() {
   		return Math.floor(Math.random()*16777215).toString(16);
   	}
 
@@ -110,12 +110,9 @@
   		theme: { "palette": { "primary": "#42b983", "secondary": "#ffffff", "tertiary": "#333333"} }
   	};
 
-    window.addEventListener( 'load', () => {
-      const buttons = document.querySelectorAll( '.donate' )
-
-      for ( const button of buttons )
-        PayButton.render( button, config );
-    })
+  	setTimeout(function () {
+  		PayButton.render(document.getElementById('donate'), config);
+  	}, 200);*/
   </script>
 </body>
 </html>
