added page-level rendering of paybuttons

--- a/new-docs/index.html
+++ b/new-docs/index.html
@@ -15,6 +15,7 @@
       name: '',
       repo: '',
       coverpage: ['/', '/zh-cn/'],
+      executeScript: true,
       loadSidebar: true,
       loadNavbar: 'nav.md'
     }
