Revised sidebar, moved React section into getstarted area.

--- a/new-docs/index.html
+++ b/new-docs/index.html
@@ -13,8 +13,9 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '',
-      repo: '',
+      name: 'PayButton',
+      repo: 'paybutton/paybutton',
+      homepage: 'getstarted.md',
       coverpage: ['/', '/zh-cn/'],
       executeScript: true,
       themeColor: "#42b983", // this is the default 'vue' color
