--- a/new-docs/index.html
+++ b/new-docs/index.html
@@ -16,6 +16,25 @@
 </head>
 <body>
   <div id="app"></div>
+  
+  <!-- Docsify v4 -->
+  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
+  <script src="https://unpkg.com/docsify-copy-code@2"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-dark-mode@latest/dist/index.min.js"></script>
+  <script src="https://cdn.bootcss.com/react/15.6.1/react.js"></script>
+  <script src="https://cdn.bootcss.com/react/15.6.1/react-dom.js"></script>
+
+  <script src="https://unpkg.com/@paybutton/paybutton@1.0.2/dist/paybutton.js"></script>
+
+  
+  <!-- docsify box react -->
+  <script src="https://cdn.bootcss.com/react/15.6.1/react.js"></script>
+  <script src="https://cdn.bootcss.com/react/15.6.1/react-dom.js"></script>
+  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+  <script src="//unpkg.com/docsify-demo-box-react@1.0.1/dist/docsify-demo-box-react.min.js"></script>
+
   <script>
     window.$docsify = {
       name: 'PayButton',
@@ -25,25 +44,28 @@
       executeScript: true,
       themeColor: "#42b983", // this is the default 'vue' color
       loadSidebar: true,
-      loadNavbar: 'nav.md'
+      loadNavbar: 'nav.md',
+      plugins: [
+        (function () {
+          const jsResources = [
+            '//cdn.bootcss.com/react/15.6.1/react.js',
+            '//cdn.bootcss.com/react/15.6.1/react-dom.js',
+            '//unpkg.com/@paybutton/react',
+          ].map( (url) => `<script src="${url}"><` + `/script>` )
+           .join('\n')
+          return DemoBoxReact.create(jsResources)
+        })()
+      ]
     }
   </script>
-  <!-- Docsify v4 -->
-  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-  
-  <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
-  <script src="https://unpkg.com/docsify-copy-code@2"></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify-dark-mode@latest/dist/index.min.js"></script>
-
-  <script src="https://unpkg.com/@paybutton/paybutton@1.0.2/dist/paybutton.js"></script>
 
   <script type="text/javascript">
   	function render( selector, config ) {
-	  const buttons = document.querySelectorAll( selector )
-	  for ( const button of buttons ) {
-	    PayButton.render( button, config );
-	  }
-	}
+      const buttons = document.querySelectorAll( selector )
+      for ( const button of buttons ) {
+        PayButton.render( button, config );
+      }
+    }
   </script>
 </body>
 </html>
