Continued with Chinese translations.

--- a/new-docs/index.html
+++ b/new-docs/index.html
@@ -21,7 +21,7 @@
     window.$docsify = {
       name: 'PayButton',
       repo: 'paybutton/paybutton',
-      homepage: 'getstarted.md',
+      homepage: 'README.md',
       coverpage: ['/', '/zh-cn/'],
       executeScript: true,
       themeColor: "#42b983", // this is the default 'vue' color
