remove react-app

--- a/paybutton/dev/widget.html
+++ b/paybutton/dev/widget.html
@@ -22,10 +22,25 @@
   <body>
     <script src="paybutton.js"></script>
 
+    <nav>
+      <a
+        style="border: 1px solid grey; text-decoration: none; margin: 1rem"
+        href="/"
+      >
+        Default
+      </a>
+      <a
+        style="border: 1px solid grey; text-decoration: none; margin: 1rem"
+        href="/widget"
+      >
+        Widget
+      </a>
+    </nav>
+
     <div
-      class="paybutton"
+      class="paybutton-widget"
       to="bitcoincash:qrmm7edwuj4jf7tnvygjyztyy0a0qxvl7q9ayphulp"
-      amount="3.234"
+      amount="0.01"
     ></div>
   </body>
 </html>
