--- a/paybutton/dev/widget.html
+++ b/paybutton/dev/widget.html
@@ -11,10 +11,7 @@
     <meta property="og:url" content="" />
     <meta property="og:image" content="" />
 
-    <link rel="manifest" href="site.webmanifest" />
-    <link rel="apple-touch-icon" href="icon.png" />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <meta name="theme-color" content="#fafafa" />
   </head>
@@ -23,18 +20,9 @@
     <script src="paybutton.js"></script>
 
     <nav>
-      <a
-        style="border: 1px solid grey; text-decoration: none; margin: 1rem"
-        href="/"
-      >
-        Default
-      </a>
-      <a
-        style="border: 1px solid grey; text-decoration: none; margin: 1rem"
-        href="/widget"
-      >
-        Widget
-      </a>
+      <a href="/"> Default </a>
+      <a href="/widget"> Widget </a>
+      <a href="/advanced"> Advanced </a>
     </nav>
 
     <div
