update dev environment

--- a/paybutton/dev/advanced.html
+++ b/paybutton/dev/advanced.html
@@ -20,7 +20,7 @@
     <script src="paybutton.js"></script>
 
     <nav>
-      <a href="/"> Default </a>
+      <a href="/default"> Default </a>
       <a href="/widget"> Widget </a>
       <a href="/advanced"> Advanced </a>
     </nav>
