--- a/paybutton/dev/default.html
+++ b/paybutton/dev/default.html
@@ -20,7 +20,7 @@
     <script src="paybutton.js"></script>
 
     <nav>
-      <a href="/"> Default </a>
+      <a href="/default"> Default </a>
       <a href="/widget"> Widget </a>
       <a href="/advanced"> Advanced </a>
     </nav>
@@ -28,7 +28,8 @@
     <div
       class="paybutton"
       to="bitcoincash:qrmm7edwuj4jf7tnvygjyztyy0a0qxvl7q9ayphulp"
-      amount="3.234"
+      goal-amount="123113.5"
+      currency="EUR"
     ></div>
   </body>
 </html>
