--- a/paybutton/dev/widget.html
+++ b/paybutton/dev/widget.html
@@ -20,7 +20,7 @@
     <script src="paybutton.js"></script>
 
     <nav>
-      <a href="/"> Default </a>
+      <a href="/default"> Default </a>
       <a href="/widget"> Widget </a>
       <a href="/advanced"> Advanced </a>
     </nav>
@@ -28,7 +28,6 @@
     <div
       class="paybutton-widget"
       to="bitcoincash:qrmm7edwuj4jf7tnvygjyztyy0a0qxvl7q9ayphulp"
-      amount="0.01"
     ></div>
   </body>
 </html>
