chore: add op-return to docs

--- a/paybutton/dev/advanced.html
+++ b/paybutton/dev/advanced.html
@@ -59,6 +59,7 @@
         },
         animation: 'invert',
         successText: 'Purchase Complete!',
+        opReturn: 'customMessage',
         onSuccess: mySuccessFunction,
         onTransaction: myTransactionFunction,
         onOpen: myOpenFunction,
