chore: fix cursor pointer

--- a/paybutton/dev/demo/index.html
+++ b/paybutton/dev/demo/index.html
@@ -54,6 +54,7 @@
     }
 
     .btn button:hover {
+      cursor: pointer !important;
       background: #518efeb7;
       color: #101563;
       /* Change text color on hover for a cool effect */
