--- a/paybutton/dev/demo/index.html
+++ b/paybutton/dev/demo/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html [object Object]>
+<html>
 
 <head>
   <meta charset="utf-8" />
@@ -7,73 +7,19 @@
   <style>
     body {
       padding: auto;
-    }
-
-    .buttons-section {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-      gap: 20px;
-      width: 100%;
-      padding: 5px;
-      align-items: center;
-    }
-
-    .buttons-section div {
-      width: 100%;
-    }
-
-    .widgets-section {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-      gap: 20px;
-      width: 100%;
-      padding: 10px;
-      align-items: center;
-    }
-
-    .btn {
-      display: flex;
-      margin: 10px;
-    }
-
-    .btn button {
-      text-transform: none;
-      color: #fff;
-      /* Bright white text color for better contrast */
-      border: 1px solid rgb(58, 48, 166);
-      /* Vibrant purple border */
-      margin: auto !important;
-      padding: 0.618em 1.618em !important;
-      font-size: 1em !important;
-      min-width: 14em !important;
-      background: #518efe;
-      transition: background-position 0.8s ease 0s, color 0.15s ease 0s,
-        border-color 0.4s ease 0s;
-      /* Smooth transition for background and border color */
-      border-radius: 10px !important;
-    }
-
-    .btn button:hover {
-      cursor: pointer !important;
-      background: #518efeb7;
-      color: #101563;
-      /* Change text color on hover for a cool effect */
-    }
-
-    .btn.purple button {
-      border: 2px solid #7a33ff;
-      /* Vibrant purple border */
-      background: #9a55ff;
-    }
-
-    .btn.purple button:hover {
-      background: #ebe0fb;
-      color: #5805f3;/
+      font-family: Arial, sans-serif;
     }
   </style>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
+  <div class="navbar">
+    <a href="./index.html#buttons-section">Buttons</a>
+    <a href="./index.html#widgets-section">Widgets</a>
+    <a href="./paybutton-generator.html">Generator</a>
+  </div>
+
   <script src="./paybutton.js"></script>
 
   <div class="buttons-section">
@@ -131,7 +77,7 @@
     </div>
   </div>
   <br />
-  <div class="widgets-section">
+  <div class="widgets-section" id="widgets-section">
     <div>
       <div id="the_widget" class="paybutton-widget" to="ecash:qrmm7edwuj4jf7tnvygjyztyy0a0qxvl7quss2vxek"
         goal-amount="500000" hover-text="BLARG" amount="1000.69" success-text="WOW!" text="Purchase"
@@ -160,14 +106,15 @@
       <br />
     </div>
   </div>
+
   <script>
     function mySuccessFunction(tx) {
-      console.log(tx)
+      console.log({ tx })
       console.log('Success')
     }
 
     function myTransactionFunction(tx) {
-      console.log(tx)
+      console.log({ tx })
       console.log('Transaction')
     }
 
