fix: paybutton disabled

--- a/paybutton/dev/demo/paybutton-generator.html
+++ b/paybutton/dev/demo/paybutton-generator.html
@@ -148,6 +148,7 @@
           :random-satoshis="paybuttonProps.randomSatoshis"
           :hide-toasts="paybuttonProps.hideToasts"
           :disable-enforce-focus="paybuttonProps.disableEnforceFocus"
+          :disabled="paybuttonProps.disabled"
           :on-success="mySuccessFuction"
           :on-transaction="myTransactionFuction">
         </div>
