--- a/paybutton/dev/demo/index.html
+++ b/paybutton/dev/demo/index.html
@@ -38,7 +38,7 @@
       currency="BCH" text="Purchase" on-transaction="myTransactionFunction"></div>
 
     <div class="paybutton" to="ecash:qrmm7edwuj4jf7tnvygjyztyy0a0qxvl7quss2vxek" goal-amount="2500.05" currency="USD"
-      text="Donate (other dev)" on-success="mySuccessFunction" on-transaction="myTransactionFunction"></div>
+      text="Donate (other dev)" on-success="mySuccessFunction" on-transaction="myTransactionFunction" enable-altpayment="false"></div>
 
     <div class="paybutton" to="ecash:qrmm7edwuj4jf7tnvygjyztyy0a0qxvl7quss2vxek" goal-amount="2500000.05"
       on-close="myClose" on-open="myOpen" amount="50" currency="USD" text="Random Sats" random-satoshis="true"
