--- a/paybutton/dev/demo/paybutton-generator.html
+++ b/paybutton/dev/demo/paybutton-generator.html
@@ -154,9 +154,9 @@
               <label for="random-satoshis">Random Satoshis</label>
             </div>
             <div class="form-input toggle">
-              <input type="checkbox" id="enable-altpayment" v-model="paybuttonProps.enableAltpayment" true-value="true"
+              <input type="checkbox" id="disable-altpayment" v-model="paybuttonProps.disableAltpayment" true-value="true"
                 false-value="false">
-              <label for="enable-altpayment">Enable Altpayment</label>
+              <label for="disable-altpayment">Enable Altpayment</label>
             </div>
           </div>
           <div>
@@ -205,7 +205,7 @@
             :disabled="paybuttonProps.disabled"
             :on-success="mySuccessFuction"
             :on-transaction="myTransactionFuction"
-            :enable-altpayment="paybuttonProps.enableAltpayment"
+            :disable-altpayment="paybuttonProps.disableAltpayment"
             :op-return="paybuttonProps.opReturn">
           </div>
         </div>
@@ -235,7 +235,7 @@
             randomSatoshis: false,
             hideToasts: false,
             disableEnforceFocus: false,
-            enableAltpayment: false,
+            disableAltpayment: false,
             contributionOffset: undefined,
             opReturn:undefined,
             onSuccess: mySuccessFuction,
