fix: disable>enable altpayment

--- a/paybutton/dev/demo/paybutton-generator.html
+++ b/paybutton/dev/demo/paybutton-generator.html
@@ -156,7 +156,7 @@
             <div class="form-input toggle">
               <input type="checkbox" id="disable-altpayment" v-model="paybuttonProps.disableAltpayment" true-value="true"
                 false-value="false">
-              <label for="disable-altpayment">Enable Altpayment</label>
+              <label for="disable-altpayment">Disable Altpayment</label>
             </div>
           </div>
           <div>
