feat: add size aliases

--- a/paybutton/dev/demo/paybutton-generator.html
+++ b/paybutton/dev/demo/paybutton-generator.html
@@ -131,11 +131,11 @@
             <div class="form-input">
               <label for="hoverText" style="width: 20%;">Size:</label>
               <select id="paybutton-type" v-model="paybuttonProps.size" class="selector">
-                <option value="xm">xm</option>
-                <option value="sm">sm</option>
-                <option value="md">md</option>
-                <option value="lg">lg</option>
-                <option value="xl">xl</option>
+                <option value="xs">Extra Small</option>
+                <option value="sm">Small</option>
+                <option value="md">Regular</option>
+                <option value="lg">Large</option>
+                <option value="xl">Extra Large</option>
               </select>
             </div>
 
