remove edit to demo index

--- a/paybutton/dev/demo/index.html
+++ b/paybutton/dev/demo/index.html
@@ -27,7 +27,7 @@
     <div class="paybutton" to="bitcoincash:qzy3s3qk8py0qvl97syex7tgap22pa2xfupwc4n659" amount="5" currency="USD"
       display-currency="BCH" size="sm"></div>
 
-    <div class="paybutton" to="ecash:qp2v7kemclu7mv5y3h9qprwp0mrevkqt9gprvmm7yl" amount="100000"
+    <div class="paybutton" to="ecash:qp2v7kemclu7mv5y3h9qprwp0mrevkqt9gprvmm7yl"
       theme='{ "palette": { "primary": "#FF00FF", "secondary": "#ffffff", "tertiary": "#333333"} }'></div>
 
     <div class="paybutton" to="ecash:qp2v7kemclu7mv5y3h9qprwp0mrevkqt9gprvmm7yl" text="Purchase" amount="0.01"
