fix: double editable

--- a/paybutton/dev/demo/single.html
+++ b/paybutton/dev/demo/single.html
@@ -19,7 +19,7 @@
     <div class="paybutton" to="ecash:qr64gaal5zx97judme7nmqxpru6gnx8p3uwgvx585h" text="Purchase" amount="1001"
       editable="true"
       currency="XEC" goal-amount="2.5" success-text="WOW!" on-close="myClose" on-open="myOpen"
-      on-success="mySuccessFunction" on-transaction="myTransactionFunction" editable="true" size="lg"></div>
+      on-success="mySuccessFunction" on-transaction="myTransactionFunction" size="lg"></div>
   <script>
     function mySuccessFunction(tx) {
       console.log('Ran mySuccess', { tx })
