feat: fields in demo page

--- a/paybutton/dev/demo/index.html
+++ b/paybutton/dev/demo/index.html
@@ -30,6 +30,14 @@
     <div class="paybutton" to="ecash:qp2v7kemclu7mv5y3h9qprwp0mrevkqt9gprvmm7yl"
       theme='{ "palette": { "primary": "#FF00FF", "secondary": "#ffffff", "tertiary": "#333333"} }'></div>
 
+    <div 
+      class="paybutton"
+      to="ecash:qp2v7kemclu7mv5y3h9qprwp0mrevkqt9gprvmm7yl"
+      amount="50"
+      theme='{ "palette": { "primary": "#D64045", "secondary": "#ffffff", "tertiary": "#333333"} }'
+      fields='[{"name": "name", "text": "Enter your name", "type": "text"} ]'
+    ></div>
+
     <div class="paybutton" to="ecash:qp2v7kemclu7mv5y3h9qprwp0mrevkqt9gprvmm7yl" text="Purchase" amount="0.01"
       currency="CAD" goal-amount="2.5" success-text="WOW!" on-close="myClose" on-open="myOpen"
       on-success="mySuccessFunction" on-transaction="myTransactionFunction" editable="true" size="lg"></div>
